Few improvements in DDPG

--- a/configs/bipedalwalker_easy.yaml
+++ b/configs/bipedalwalker_easy.yaml
@@ -2,11 +2,30 @@ env_name: 'BipedalWalker-v3'
 env_parameters:
   hardcore: false
 
-seed: 408
+agent_name: 
+seed: 0 # Default seed if not provided
 exp_name: part1_env02
+
+
 run_id: ??? # decided during execution
 
-agent_name: pg_ac
+
+#POLICY GRADIENT ACTOR CRITIC
+pg_ac_train_episodes: 2000
+pg_ac_gamma: 0.99
+pg_ac_lr: 5e-4
+pg_ac_batch_size: 100
+pg_ac_buffer_size: 1e6
+
+#DEEP DETERMINISTIC POLICY GRADIENT
+ddpg_train_episodes: 1500
+ddpg_gamma: 0.99
+ddpg_lr: 1e-4
+ddpg_tau: 0.005
+ddpg_batch_size: 128
+ddpg_buffer_size: 1e6
+
+
 
 config_name: bipedalwalker_easy
 testing: false
